--- a/terminalEdition/makefile
+++ b/terminalEdition/makefile
@@ -2,4 +2,5 @@ default: all
 all: MainClass.java UtilClass.java ReuterDoc.java MinHashing.java
 	javac -cp "./jsoup-1.9.2.jar" MainClass.java UtilClass.java ReuterDoc.java MinHashing.java
 
-clean: rm -rf *.class
+clean: 
+	rm -rf *.class
